--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -240,6 +240,9 @@ The email feature is faciliated by Outlook Mail API, since most NUS teaching ass
 
 This API is a RESTful API, made for server-client communication. Since the Outlook mail API is a RESTful API, this feature uses the 'POST' request (which requests that the web server accepts the data enclosed in the body of the request message) to send the email specified in the user-input to the student specified in the user-input.
 
+.Component interactions for Email command
+image::Component Interactions Email.png[width="800"]
+
 The email command itself takes a few parameters:
 
 * `Index`: Index number of student in list. Only positive numbers present in list are valid.
@@ -252,6 +255,11 @@ When the user inputs the email in the CLI,  the input is parsed, and the email a
 
 The subject and body are converted to JSON, and passed as the `body` of the 'POST' request to Outlook, along with the access token that is also retrieved through a series of requests to the server.
 
+.Sequence Diagram for Email command
+image::Sequence Diagram LOGIC.png[width="1200"]
+
+The `CommandResult` object that is returned by the email command lets the user know if the email address has been successfully send to the student whose index is specified.
+
 **Retrieving access token for the request:** +
 
 When the user uses the command, he/she is redirected to a browser window page of Outlook's sign in page. Once they sign in, they will be asked for their permission for the application to send mails on their behalf. Once they accept and give consent, the response sent from the server contains the authorization code.
@@ -260,13 +268,8 @@ This authorization code is then extracted from the response and used to request 
 
 Using the authorization code, the access token is retrieved through a request. Once the access token is extracted from the response and available, the actual POST request to send the email is made.
 
-.App interactions with Outlook for email command
+.With the App interactions and the App's interactions with Outlook
 image::Request Sequence Diagram.png[width="800"]
-
-The `CommandResult` object that is returned by the email command lets the user know if the email address has been successfully send to the student whose index is specified.
-
-.Component interactions for email command
-image::Sequence Diagram LOGIC.png[width="1200"]
 
 ==== Design Considerations:
 
