--- a/docs/team/preethi-d.adoc
+++ b/docs/team/preethi-d.adoc
@@ -70,6 +70,6 @@ include::../UserGuide.adoc[tag=email]
 
 Updated UML Diagram
 
-include::../DeveloperGuide.adoc[tag=email]
-include::../DeveloperGuide.adoc[tag=emailUseCase]
-include::../DeveloperGuide.adoc[tag=emailManualTest]
+include::../DeveloperGuide.adoc[tag=email] +
+include::../DeveloperGuide.adoc[tag=emailUseCase] +
+include::../DeveloperGuide.adoc[tag=emailManualTest] +
