--- a/docs/team/preethi-d.adoc
+++ b/docs/team/preethi-d.adoc
@@ -68,8 +68,8 @@ include::../UserGuide.adoc[tag=email]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-Updated UML Diagram
-
 include::../DeveloperGuide.adoc[tag=email]
 include::../DeveloperGuide.adoc[tag=emailUseCase]
+
+Manual Test:
 include::../DeveloperGuide.adoc[tag=emailManualTest]
