--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1211,7 +1211,7 @@ _{ more test cases ... }_
 _{ more test cases ... }_
 
 // tag::attendancetests[]
-=== Marking Attendance of a student/students
+=== Marking Attendance of a student(s)
 
 . Update the attendance of a student or a `group` of students
 
