--- a/docs/team/preethi-d.adoc
+++ b/docs/team/preethi-d.adoc
@@ -71,5 +71,5 @@ include::../UserGuide.adoc[tag=email]
 include::../DeveloperGuide.adoc[tag=email]
 include::../DeveloperGuide.adoc[tag=emailUseCase]
 
-Manual Test:
+*Manual Test:* +
 include::../DeveloperGuide.adoc[tag=emailManualTest]
