--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1210,8 +1210,9 @@ _{ more test cases ... }_
 
 _{ more test cases ... }_
 
-// tag::attendancetests[]
 === Marking Attendance of a student(s)
+// tag::attendancetests[]
+Marking attendance
 
 . Update the attendance of a student or a `group` of students
 
