--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -163,7 +163,7 @@ image::UiClassDiagram.png[width="800"]
 
 *API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
 
-The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `StudentListPanel`, `StatusBarFooter`, `EventListPanel` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
+The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `StudentListPanel`, `EventListPanel`, `GroupListPanel`, `GraphPanel`, `StatusBarFooter`, etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
 The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
@@ -206,7 +206,7 @@ The `Model`,
 * stores a `UserPref` object that represents the user's preferences.
 * stores the Address Book data.
 * stores the Calendar data.
-* exposes an unmodifiable `ObservableList<Student>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
+* exposes an unmodifiable `ObservableList<Student>` and `ObservableList<Event>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
 * does not depend on any of the other three components.
 
 [[Design-Storage]]
@@ -336,7 +336,7 @@ image::EventStorageSequenceDiagram.png[width="800"]
 The diagram below shows how the schedule command is parsed in the Logic component. Here again, `EVENT` is the event as specified by the input parameters.
 
 .Logic diagram for `schedule EVENT` command
-image::ScheduleEventSdForLogic.png[width="800"]
+image::ScheduleSequenceDiagram.png[width="800"]
 
 ===== Cancel
 
@@ -407,26 +407,14 @@ interacts as expected with the undo/redo command as well.
 ==== Aspect: How to display events
 * **Alternative 1 (current choice):** Simply display all events, and scroll to nearest upcoming event.
 ** Pros: Allows the user to see the entire list of events, past and future.
-** Cons: Will definitely get cluttered over time.
 
 * **Alternative 2:** Display upcoming events, and keep past events in a "history" tab.
 ** Pros: Is a compromise between the alternative 1 and 3.
-** Cons: May make the GUI itself cluttered.
+** Cons: Will distract from the focus of the events.
 
 * **Alternative 3:** Delete events once they are in the past.
 ** Pros: Keeps things neat and in a to-do fashion.
 ** Cons: Takes control away from the user to handle their own events.
-
-===== Aspect: How schedule handles the event model and storage
-
-* **Alternative 1 (current choice):** Stores the list of events within the same model as the addressbook, but keep
-storage separate.
-** Pros: Will be consistent with the implementation of the addressbook, while also ensuring that the storage component
-is distinct.
-
-* **Alternative 2:** Store the list of events as its own separate model and separate storage.
-** Pros: Will not interfere greatly with the implementation of the addressbook itself
-** Cons: Will be detached from the original architecture
 // end::calendar[]
 
 // tag::attendance[]
@@ -1218,7 +1206,51 @@ _{ more test cases ... }_
 .. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
    Expected: Similar to previous.
 
-_{ more test cases ... }_
+// tag::calendartests[]
+=== Scheduling of an event
+
+. Scheduling an event in the event list
+.. Test case: `schedule event/CS2103 Practical Exam date/16-11-2018 start/16:00 end/18:00 descr/Acceptance testing` +
+   Expected: The event with the specified details is scheduled into the calendar. Details of the event are shown. Timestamp in the status bar is updated. +
+.. Test case: `schedule event/CS2103 Practical Exam date/16-11-2018 start/16:00 end/18:00 descr/Testing other programs` +
+   Expected: No event scheduled. Error message denoting duplicate event (if previous test case has run) +
+.. Test case: `schedule event/Tutorial date/16-11-2018 start/12:00 end/13:00` +
+   Expected: The event with the specified details (without description) is scheduled into the calendar. Details of the event are shown. Timestamp in the status bar is updated. +
+.. Test case: `schedule event/Consultation date/32-11-2018 start/16:00 end/18:00 descr/With Bob` +
+   Expected: No event scheduled. Error message denoting invalid date +
+.. Test case: `schedule event/CS2103 Tutorial date/15-11-2018 end/12:00 descr/Content review` +
+  Expected: No event scheduled. Error message denoting missing parameter. +
+.. Test case: `schedule event/CS2103 Practical Exam date/16-11-2018 start/16:00 end/18:00 descr/Acceptance testing` +
+   Expected: The event with the specified details are scheduled into the calendar. +
+
+. Cancelling an event in the event list
+.. Prerequisites: The events must exist in the calendar.
+.. Test case: `cancel event/CS2103 Practical Exam date/16-11-2018 start/16:00 end/18:00` +
+   Expected: The event with the specified details is deleted from the calendar. Details of the cancelled event are shown. Timestamp in the status bar is updated. +
+.. Test case: `cancel event/tutorial date/16-11-2018 start/25:00 end/18:00` +
+   Expected: Error message denoting invalid time. Calendar remains the same. +
+.. Other incorrect cancel commands to try: `cancel`, `cancel e` (where e is not in the calendar)
+   Expected: Error details shown.
+
+. Undoing and Redoing commands between the calendar and address book
+.. Prerequisites: Multiple students in the student list, and the following test cases are carried out in order
+.. Test case (set up): `schedule event/CS2103 Practical Exam date/16-11-2018 start/16:00 end/18:00 descr/Acceptance testing` +
+   Expected: The event with the specified details is scheduled into the calendar. Details of the event are shown. Timestamp in the status bar is updated. +
+.. Test case (set up): `delete 1` +
+   Expected: First student is deleted from the list. Details of the deleted contact shown in the status message. Timestamp in the status bar is updated. +
+.. Test case: `undo` +
+   Expected: Deleted student is added back into the list. Undo success is shown. Timestamp in the status bar is updated. +
+.. Test case: `undo` +
+   Expected: The event added in the first test case is deleted from the calendar. Details of the event are shown. Timestamp in the status bar is updated. +
+.. Test case: `redo` +
+   Expected: The event deleted in the previous `undo` is scheduled back into the calendar. Details of the event are shown. Timestamp in the status bar is updated. +
+.. Incorrect commands to try: `undo` when no changes have been made, `redo` when the previous command was not an `undo` and had changed the calendar/address book.
+   Expected: Error details shown.
+
+. Clearing the calendar and address book
+.. Test case: `clear`
+   Expected: The calendar and address book are cleared.
+// end::calendartests[]
 
 // tag::attendancetests[]
 === Marking Attendance of a student/students
