--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -136,7 +136,6 @@ Marks the attendance of the student with index number 3 as absent.
 Marks the attendance of all the students in group-tutorial1 as present.
 // end::attendance[]
 
-=== Schedule timetables: `schedule`
 // tag::schedule[]
 === Schedule events: `schedule`
 
@@ -151,8 +150,11 @@ Format: `schedule event/EVENT_NAME date/DATE start/TIME_START end/TIME_END [desc
 
 Examples:
 
-* `schedule event/CS2103 Tutorial W13 date/22-3-2018 start/16:00 end/18:00 descr/Product demo` +
-Schedules an event named `CS2103-Tutorial-W13` on 22-3-2018 from 4:00pm to 6:00pm.
+* `schedule event/CS2103 Tutorial 11 date/14-11-2018 start/13:00 end/14:00 descr/Final Product Demo` +
+Schedules an event named `CS2103 Tutorial 11` on 14-11-2018 from 1:00pm to 2:00pm.
++
+image::ScheduleExampleForUG.png[width=700]
++
 // end::schedule[]
 
 // tag::cancel[]
@@ -169,7 +171,7 @@ Format: `cancel event/EVENT_NAME date/DATE start/TIME_START end/TIME_END`
 Examples:
 
 * `cancel event/CS2103 Consultation date/24-9-2019 start/18:00 end/19:00` +
-Cancels the event named `CS2103-Tutorial-W13` on 24-9-2019 from 6:00pm to 7:00pm.
+Cancels the event named `CS2103 Consultation` on 24-9-2019 from 6:00pm to 7:00pm that is present in the calendar.
 // end::cancel[]
 
 === Locating students by name/tag: `find`
