Fix style issue

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1223,7 +1223,7 @@ These instructions only provide a starting point for testers to work on; testers
 .. Prerequisites: The student must exist on the list, at the correct index. If student does not exist yet, add student first.
 .. Test case: `email 1 s/Attendance b/Your attendance is good` +
    Expected: Email sent to student at index '1' and success message shown in status message.
-.. Test case: `email 1 s/Attendance! b/Your attendance is very good!!` +
+.. Test case: `email 1 s/Attendance! b/Your attendance is very good!!!` +
    Expected: Email sent to student at index '1' and success message shown in status message.
 .. Test case: `email 0 s/Attendance b/Your attendance is good!` +
    Expected: No student is emailed. Error details shown in status message.
