--- a/README.adoc
+++ b/README.adoc
@@ -5,11 +5,11 @@ https://travis-ci.org/CS2103-AY1819S1-W13-3/main[image:https://travis-ci.org/se-
 https://coveralls.io/github/CS2103-AY1819S1-W13-3/main?branch=master[image:https://coveralls.io/repos/github/CS2103-AY1819S1-W13-3/main/badge.svg?branch=master[Coverage Status]]
 
 ifdef::env-github[]
-image::docs/images/Ui.png[width="600"]
+image::docs/images/UiMockup.png[width="600"]
 endif::[]
 
 ifndef::env-github[]
-image::images/Ui.png[width="600"]
+image::images/UiMockup.png[width="600"]
 endif::[]
 
 * This is a student management system for teaching assistants. It has a GUI but most of the user interactions happen using a Command Line Interface.
